Sat, 05 Jan 2008 15:34:23 +0100 <thp@perli.net>
Make logging in libpodcasts less verbose

	* src/gpodder/libpodcasts.py: Remove some verbose logging code

Wed, 02 Jan 2008 15:39:04 +0100 <thp@perli.net>
Migrate from channels.xml (from 0.9.4) to channels.opml if needed

	* src/gpodder/libgpodder.py: Add code to check if channels.xml exists
	but channels.opml doesn't and if so, try to convert from channels.xml
	to channels.opml, so users upgrading from 0.9.4 directly will have
	their channel list automatically converted;
	thanks to Tim Michelsen for the bug report and helpful Ubuntu info

Tue, 01 Jan 2008 23:32:50 +0100 <thp@perli.net>
Add download completion notification support

	* src/gpodder/download.py: Notify the download status manager when a
	download has been completed successfully
	* src/gpodder/services.py: Add download-complete signal to list of
	possible signals and download_completed() method to be used by
	downloads to notify the status manager of a successful download

Sat, 29 Dec 2007 14:21:51 +0100 <thp@perli.net>
Patch the feedparser module to correctly process democracynow.org

	* src/gpodder/cache.py: Add a patch_feedparser() method that checks of
	the feedparser module correctly maps the "plain" content-type to the
	correct "text/plain" content-type and if not, replace the
	mapContentType method with a fixed one; this should make the audio
	podcast on democracynow.org working (thanks to Clark Burbidge for the
	bug report)

Sun, 23 Dec 2007 12:20:25 +0100 <thp@perli.net>
Better username/password extraction from URLs

	* src/gpodder/util.py: Improve username and password extraction for
	authentication URLs; thanks to Nick <me@nikosapi.org> and Shane
	Donohoe <priestoftime@googlemail.com> for reporting this bug and
	sending in a patch; this should allow for e-mail address usernames

Sat, 22 Dec 2007 11:44:41 +0100 <thp@perli.net>
Also delete old episodes that have disappeared from the feed
